# galaxy_camera

./: CMakeLists.txt  LICENSE  README.md  galaxy_camera.xml  nodelet_plugins.xml  package.xml
cfg/: camera.cfg
include/: galaxy_camera.h  galaxy_camera_node.h
include/libgxiapi/: DxImageProc.h  GxIAPI.h
launch/: MER-139.launch
src/: galaxy_camera.cpp  galaxy_camera_node.cpp  main.cpp
