<?xml version="1.0"?>
<package format="2">
    <name>galaxy_camera</name>
    <version>1.0.0</version>
    <description>The galaxy_camera package</description>

    <maintainer email="liaoqiayuan@gmail.com">qiayuan</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
