<?xml version="1.0"?>
<package format="2">
    <name>galaxy_camera</name>
    <version>1.0.0</version>
    <description>The galaxy_camera package</description>

    <maintainer email="liaoqiayuan@gmail.com">qiayuan</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>nodelet</build_export_depend>
    <build_export_depend>dynamic_reconfigure</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>camera_info_manager</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>nodelet</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>camera_info_manager</exec_depend>
    <exec_depend>image_transport_plugins</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <nodelet plugin="${prefix}/galaxy_camera.xml"/>
    </export>
</package>
